--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -11,12 +11,13 @@ div#wrapper {
 text-align: left; 
 margin: 0 auto; 
 width: 900px; 
+background-color: white;
 border: 1px solid black; 
 }
 
 div#nav {
   color:lightsteelblue;
-  background-color: ivory;
+  background-color: dimgray;
   width: 100%;
 }
 div#details {
