--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -18,7 +18,9 @@ border: 1px solid black;
 div#nav {
   color:lightsteelblue;
   background-color: dimgray;
-  width: 100%;
+  width: 900px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 div#details {
   margin-right:12%;
