--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -11,8 +11,7 @@ div#wrapper {
 text-align: left; 
 margin: 0 auto; 
 width: 900px; 
-background-color: white;
-border: 1px solid black; 
+border: 1px solid aliceblue; 
 }
 
 div#nav {
