--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -11,16 +11,15 @@ div#wrapper {
   text-align: left; 
   margin: 0 auto; 
   width: 900px; 
-  border: 1px solid aliceblue; 
+  border: 1px solid lavendarblush; 
 }
-
 div#nav {
   color:aliceblue;
   width: 900px;
   padding-top: 5px;
   padding-bottom: 5px;
-  border: 1px solid aliceblue; 
-
+  border: 1px solid lavendarblush; 
+  border-top: none;
 }
 div#details {
   margin-right:12%;
