--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -11,14 +11,14 @@ div#wrapper {
   text-align: left; 
   margin: 0 auto; 
   width: 900px; 
-  border: 1px solid lavendarblush; 
+  border: 1px solid lavenderblush; 
 }
 div#nav {
   color:aliceblue;
   width: 900px;
   padding-top: 5px;
   padding-bottom: 5px;
-  border: 1px solid lavendarblush; 
+  border: 1px solid lavenderblush; 
   border-top: none;
 }
 div#details {
