make over and current links change color on mouseover

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -46,10 +46,10 @@ a {
   letter-spacing:1px;
 }
 a:hover {
-  color:cornflowerblue;
+  color:dodgerblue;
 }
 a#current {
-  color:cornflowerblue;
+  color:dodgerblue;
 }
 #labels {
   float:left;
