--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -11,14 +11,14 @@ div#wrapper {
   text-align: left; 
   margin: 0 auto; 
   width: 900px; 
-  /*border: 1px solid lavenderblush; */
+  /*border: 1px solid silver; */
 }
 div#nav {
-  color:lavenderblush;
+  color:silver;
   width: 900px;
   padding-top: 5px;
   padding-bottom: 5px;
-  /*border: 1px solid lavenderblush; */
+  border-top: 1px outset silver;
   /*border-bottom: none; */
 }
 div#details {
