--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -2,7 +2,7 @@ body {
   background-color:black;
   color:white; 
   font-size:80%;
-  font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-family:"Droid Sans", "Lucida Sans Unicode", sans-serif;
   text-align:left;
   margin-right:12%;
   margin-left:12%;
@@ -18,8 +18,7 @@ div#nav {
   width: 900px;
   padding-top: 5px;
   padding-bottom: 5px;
-  border-top: 1px outset silver;
-  /*border-bottom: none; */
+  border: 1px outset silver;
 }
 div#details {
   margin-right:12%;
@@ -27,7 +26,7 @@ div#details {
   }
 div.footer {
   font-size:80%;
-  color:cornsilk;
+  color:silver;
 }
 div.width {
   width:800px;
