--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -43,6 +43,10 @@ div.width {
 img {
   text-decoration:none;
   border:thin solid;
+img#logo {
+  text-decoration:none;
+  border:0 solid;
+  float:right;
 }
 img.noborder {
   border: 0 none;
