change alignment of footer

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -39,6 +39,7 @@ div.footer {
   padding-top: 5px;
   padding-bottom: 5px;
   border: 1px outset silver;
+  vertical-align: middle;
 }
 div.width {
   width:800px;
