--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -15,6 +15,7 @@ div#wrapper {
 }
 div#nav {
   color:silver;
+  background-color: silver;
   width: 900px;
   padding-top: 5px;
   padding-bottom: 5px;
